<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="get_location">Get location</string>
	<string name="capture">Capture picture</string>
	<string name="sound_record">Record audio</string>
	<string name="select_image">Select picture</string>
	<string name="select_audio">Select audio</string>
</resources>
