<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.locationtest.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:id="@+id/text_location" />

    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_location"
        android:id="@+id/btn_get_location"
        android:layout_below="@+id/text_location"/>
    
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture"
        android:id="@+id/btn_capture_image"
        android:layout_below="@+id/btn_get_location"/>

     <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        android:id="@+id/btn_select_image"
        android:layout_below="@+id/btn_capture_image"/>
     
	<Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound_record"
        android:id="@+id/btn_record_audio"
        android:layout_below="@+id/btn_select_image"/>
	
	<Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_audio"
        android:id="@+id/btn_select_audio"
        android:layout_below="@+id/btn_record_audio"/>
    
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_record_audio"
        android:id="@+id/audio_1"
        android:contentDescription="@string/select_audio"
        android:layout_below="@+id/btn_select_audio"/>
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_1"
        android:contentDescription="@string/select_image"
        android:layout_below="@+id/audio_1"/>
</RelativeLayout>
